Tidy up warnings